# xDPd-for-EZappliance

config/: hw.m4
src/xdpd/: xdpd.cc
src/xdpd/drivers/ezappliance/: Makefile.am  configure.ac
src/xdpd/drivers/ezappliance/EZproxy-binary/: README.md
src/xdpd/drivers/ezappliance/src/: Makefile.am  bg_taskmanager.cc  config.h  ls_internal_state.h
src/xdpd/drivers/ezappliance/src/ezappliance/: Makefile.am  ez_corba_structures.cc  ez_packet_channel.cc  ez_packet_channel.h
src/xdpd/drivers/ezappliance/src/hal-imp/: Makefile.am  driver.cc
src/xdpd/drivers/ezappliance/src/hal-imp/openflow/openflow1x/: Makefile.am  of1x_driver.cc
src/xdpd/drivers/ezappliance/src/idl/: Makefile.am
src/xdpd/drivers/ezappliance/src/io/: Makefile.am  iface_utils.cc  iface_utils.h  pktin_dispatcher.cc
src/xdpd/drivers/ezappliance/src/pipeline-imp/: Makefile.am  atomic_operations.h  packet.cc  packet.h  platform_hooks_of1x.cc  pthread_lock.h
src/xdpd/drivers/gnu_linux/src/io/packet_classifiers/: packetclassifier.cc
src/xdpd/drivers/gnu_linux/src/pipeline-imp/: platform_hooks_of1x.cc
src/xdpd/management/: port_manager.cc
