MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = libxdpd_driver_gnu_linux_ezappliance.la

libxdpd_driver_gnu_linux_ezappliance_ladir = $(includedir)/drivers/ezappliance/ezappliance

libxdpd_driver_gnu_linux_ezappliance_la_HEADERS =
libxdpd_driver_gnu_linux_ezappliance_la_SOURCES = \
	ez_packet_channel.cc \
	ez_packet_channel.h  \
	ez_corba_client.cc \
	ez_corba_client.h \
	ez_corba_structures.cc \
	ez_corba_strucutres.h
